# Job_help_bot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: analytics.py  deps.py  jobs.py  profiles.py  resumes.py  router.py  settings.py  sources.py  sync.py
backend/app/connectors/: base.py  generic_company.py  greenhouse.py  lever.py  manual_url.py  stubs.py
backend/app/core/: config.py
backend/app/db/: init_db.py  seed.py  session.py
backend/app/llm/: ollama_client.py  prompts.py  ranking.py
backend/app/models/: __init__.py  enums.py  job.py  profile.py  source.py
backend/app/scheduler/: manager.py
backend/app/schemas/: analytics.py  common.py  jobs.py  profiles.py  resumes.py  settings.py  sources.py
backend/app/services/: dedupe.py  jobs.py  profiles.py  resume_parser.py  resumes.py  settings.py  sync.py
backend/app/utils/: text.py
backend/openjobs_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/sample_data/: profiles.example.json  sources.example.yaml
backend/tests/: test_connectors.py  test_dedupe.py  test_ranking.py  test_resume_parser.py
docs/: architecture.md  roadmap.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: JobTable.tsx  ScoreBadge.tsx  Sidebar.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: DashboardPage.tsx  JobDetailPage.tsx  ProfilesPage.tsx  ResumesPage.tsx  SettingsPage.tsx  SourcesPage.tsx
(+1 files in other folders)
